# dyscover-clevy

./: .gitignore  AUDIO_LICENSING.md  CMakeLists.txt  README.md  build-windows.ps1  install-vcpkg-windows.ps1  win-quick-build.ps1
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/tracking/: layout-switchover-monitor.md
.github/workflows/: ci.yml  integration.yml  multi-language-build.yml  release.yml  test-layout-migration.yml  vcpkg-prebuild.yml
.migration-backup/: Keys.cpp.backup  original-files.txt
cmake/: LayoutDiscovery.cmake  ResourceManifest.cmake
doc/: vendor-id-management.md
docs/: ABI_MIGRATION.md  DEBUG_TTS_PATCH.md  TROUBLESHOOTING_TTS_WINDOWS.md  TTS_FIX_SUMMARY.md  UPGRADING_CPP17.md
examples/: layout-module-example-dutch-classic.cpp  layout-module-example-flemish-classic.cpp
res/: Dyscover.manifest  Dyscover.rc  Info.plist  VersionInfo.h.in
res/layouts/classic/nl_be/: layout.cpp  metadata.json
res/layouts/classic/nl_nl/: layout.cpp  metadata.json
res/layouts/default/nl_be/: layout.cpp  metadata.json
res/layouts/default/nl_nl/: layout.cpp  metadata.json
res/layouts/kwec/nl_nl/: layout.cpp  metadata.json
scripts/: audit-deps.ps1  audit-deps.sh  build-all-languages.sh  build-chromeos.sh  build-linux.sh  build-macos.sh  build-windows-cross-mingw.sh  build-windows.ps1  cleanup-ccache.sh  create-new-layout.sh  generate-sbom.sh  macos-codesign-example.sh  notarize-macos.sh  package-macos.sh  package-windows-inno.iss  package-windows-squirrel.ps1  quick-build-linux.sh  sign-windows.ps1  validate-all-layouts.sh  validate-resource-optimization.sh  verify-hardening.ps1  verify-hardening.sh  wsl-run.sh
scripts/build-tools/: discover-layouts.cmake
scripts/migration/: migrate-to-layouts.sh  migrate-to-layouts.sh.backup
scripts/toolchains/: mingw-w64-x86_64.cmake
specs/001-compile-device-list/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-compile-device-list/checklists/: requirements.md
specs/001-compile-device-list/contracts/: README.md
specs/001-device-vendor-management-legacy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-device-vendor-management-legacy/checklists/: implementation.md  requirements.md
specs/001-device-vendor-management-legacy/contracts/: config-schema.json
specs/001-upgrade-cpp17/: spec.md
specs/001-upgrade-cpp17/checklists/: requirements.md
specs/002-cross-platform-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cross-platform-support/checklists/: requirements.md
specs/002-cross-platform-support/contracts/: interfaces.md
specs/006-language-resource-optimization/: READY_FOR_DISTRIBUTION.md  baseline.md  data-model.md  developer-guide.md  implementation-notes.md  phase6-7-completion-summary.md  phase7-announcement.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-language-resource-optimization/checklists/: requirements.md
specs/006-language-resource-optimization/contracts/: layout-api.md
specs/007-manual-compliance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-manual-compliance/checklists/: requirements.md
specs/007-manual-compliance/contracts/: layout-switching.md  pronunciation-modifier.md  selection-readout.md  tray-icon-states.md
src/: App.cpp  Audio.cpp  Audio.h  AudioLevel.cpp  Config.cpp  Core.cpp  Core.h  DebugLogger.cpp  DebugLogger.h  Device.cpp  Device.h  DeviceLinux.cpp  DeviceMac.cpp  DeviceMac.h  DeviceWindows.cpp  DeviceWindows.h  Keyboard.cpp  KeyboardWindows.cpp  KeyboardWindows.h  Keys.cpp  PreferencesDialog.cpp  ResourceLoader.cpp  SoundPlayer.cpp  SoundPlayer.h  Speech.cpp  Speech.h  SupportedDevices.h  TrayIcon.cpp
src/layouts/: LayoutLoader.h  LayoutRegistry.cpp  LayoutRegistry.h  LayoutTypes.h
src/platform/: AudioController.cpp  AudioController.h  AudioControllerChromeOS.cpp  AudioControllerLinux.cpp  AudioControllerMac.cpp  AudioControllerWindows.cpp  DeviceDetector.cpp  DeviceDetector.h  DeviceDetectorChromeOS.cpp  DeviceDetectorLinux.cpp  DeviceDetectorMac.cpp  DeviceDetectorWindows.cpp  KeyboardHandler.cpp  KeyboardHandler.h  KeyboardHandlerChromeOS.cpp  KeyboardHandlerLinux.cpp  KeyboardHandlerMac.cpp  KeyboardHandlerWindows.cpp  PlatformUtils.cpp  PlatformUtils.h  ResourceLocator.cpp  ResourceLocator.h
tests/: RUNTIME_LAYOUT_SWITCHING.md
tests/integration/: DeviceDetectionStaticListTest.cpp  DeviceIntegrationTest.cpp  test_binary_equivalence.sh  test_cmake_discovery.sh  test_cmake_validation.sh  test_layout_loading.cpp  test_migration_compile.sh  test_migration_dry_run.sh  test_migration_structure.sh
tests/unit/: AudioControllerFallbackTest.cpp  ConfigTest.cpp  DeviceDetectorBenchmark.cpp  DeviceDetectorHotplugMockTest.cpp  DeviceDetectorTest.cpp  DeviceDetectorVIDPidTest.cpp  DeviceHotplugCallbackTest.cpp  DeviceStaticListTest.cpp  DeviceTest.cpp  KeyboardHandlerCapsLockTest.cpp  KeyboardHandlerChromeOSTest.cpp  KeyboardHandlerLinuxTest.cpp  KeyboardHandlerMacTest.cpp  KeyboardHandlerPermissionTest.cpp  KeyboardHandlerPrintableCoverageTest.cpp  KeyboardHandlerTranslateTest.cpp  LayoutSwitchingTest.cpp  PerformanceSmokeTest.cpp  PronunciationModifierTest.cpp  ResourceLocatorPathsTest.cpp  TrayIconAssetsTest.cpp  TrayIconMappingTest.cpp  test_layout_registry.cpp
triplets/: x64-windows-nopkg.cmake
